--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_gravity="bottom"
-            android:background="@android:color/holo_green_dark"
+            android:background="@color/colorPrimary"
             android:focusableInTouchMode="false">
 
         </android.support.v4.view.PagerTabStrip>
