--- a/app/src/main/res/layout/fragment_layout_1.xml
+++ b/app/src/main/res/layout/fragment_layout_1.xml
@@ -1,12 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_layout_1"
+    android:id="@+id/fragment_layout_1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1"
+    android:padding="5dp"
     android:background="@color/colorPrimary"
     android:orientation="vertical"
-    tools:context=".screens.Tab1">
+    tools:context=".screens.tab1.Tab1">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:layout_marginBottom="55dp"
+        tools:ignore="UselessParent">
+
+
+            <ListView
+                android:id="@+id/contactList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:ignore="NestedScrolling" />
+
+    </ScrollView>
+
+    <EditText
+        android:id="@+id/txtContact"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginEnd="60dp"
+        android:inputType="text"
+        android:hint="@string/txt_contact_enter_name"
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorPrimaryForActions"
+        />
+
+    <Button
+        android:id="@+id/btnAddContact"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorPrimaryForActions"
+        android:text="@string/btn_add_contact"
+        android:textAllCaps="false" />
+
 
 </RelativeLayout>
