--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         <android.support.v4.view.PagerTabStrip
             android:id="@+id/pageMonitor"
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:layout_height="@dimen/activity_chin"
             android:layout_gravity="bottom"
             android:background="@color/colorPrimary"
             android:focusableInTouchMode="false">
