--- a/app/src/main/res/layout/fragment_layout_1.xml
+++ b/app/src/main/res/layout/fragment_layout_1.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1"
-    android:padding="5dp"
+    android:padding="@dimen/standardPadding"
     android:background="@color/colorPrimary"
     android:orientation="vertical"
     tools:context=".screens.tab1.Tab1">
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
-        android:layout_marginBottom="55dp"
+        android:layout_marginBottom="@dimen/tab1ListMarginBottom"
         tools:ignore="UselessParent">
 
 
@@ -29,8 +29,8 @@
     <EditText
         android:id="@+id/txtContact"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginEnd="60dp"
+        android:layout_height="@dimen/txtHeight"
+        android:layout_marginEnd="@dimen/txtMarginEnd"
         android:inputType="text"
         android:hint="@string/txt_contact_enter_name"
         android:layout_alignParentBottom="true"
@@ -39,8 +39,8 @@
 
     <Button
         android:id="@+id/btnAddContact"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="@dimen/BtnDimens"
+        android:layout_height="@dimen/BtnDimens"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:background="@color/colorPrimaryForActions"
