--- a/app/src/main/res/layout/pop_up_contact_dialog.xml
+++ b/app/src/main/res/layout/pop_up_contact_dialog.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="300dp"
+    android:layout_width="@dimen/pop_up_contact_dialog_width"
     android:layout_height="wrap_content"
     android:background="@color/colorPrimaryForActions"
     android:orientation="vertical">
