--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="@dimen/activity_chin"
             android:layout_gravity="bottom"
-            android:background="@color/colorPrimary"
+            android:background="@color/color_primary"
             android:focusableInTouchMode="false">
 
         </android.support.v4.view.PagerTabStrip>
