--- a/app/src/main/res/layout/fragment_zip_gallery.xml
+++ b/app/src/main/res/layout/fragment_zip_gallery.xml
@@ -1,53 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_layout_2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    android:padding="@dimen/standardPadding"
-    android:weightSum="1"
+    android:background="@color/color_primary"
+    android:padding="@dimen/standard_padding"
     tools:context=".screens.tab3.Tab3">
 
     <EditText
-        android:id="@+id/txtURL"
+        android:id="@+id/txt_url_for_zip"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/txtHeight"
+        android:layout_height="@dimen/txt_height"
         android:layout_alignParentTop="true"
-        android:layout_marginEnd="@dimen/txtMarginEnd"
-        android:background="@color/colorPrimaryForActions"
+        android:layout_marginEnd="@dimen/txt_margin_end"
+        android:background="@color/color_primary_for_actions"
         android:hint="@string/tab3_text_url"
         android:inputType="text"
         android:text="@string/default_link_for_zip"
         tools:ignore="TextFields" />
 
     <RelativeLayout
-        android:layout_width="@dimen/BtnDimens"
-        android:layout_height="@dimen/BtnDimens"
+        android:layout_width="@dimen/btn_dimens"
+        android:layout_height="@dimen/btn_dimens"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true">
 
         <ProgressBar
-            android:id="@+id/progressBarDownload"
+            android:id="@+id/progress_bar_download"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="invisible" />
 
         <Button
-            android:id="@+id/btnDownload"
+            android:id="@+id/btn_download_zip"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/download_img"
-            android:backgroundTint="@color/colorPrimaryForActions"
+            android:backgroundTint="@color/color_primary_for_actions"
             android:textAllCaps="false" />
     </RelativeLayout>
 
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/imgGallery"
+        android:id="@+id/gallery"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/tab1ListMarginBottom"
+        android:layout_marginTop="@dimen/tab1_list_margin_bottom"
         android:fillViewport="true">
 
     </android.support.v7.widget.RecyclerView>
