--- a/app/src/main/res/layout/img_cell_layout.xml
+++ b/app/src/main/res/layout/img_cell_layout.xml
@@ -1,6 +1,6 @@
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="@color/colorPrimary"
+    android:background="@color/color_primary"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <ImageView
